# ChangeLog for dev-java/sun-javamail
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-javamail/ChangeLog,v 1.17 2008/03/11 15:16:59 ranger Exp $

  11 Mar 2008; Brent Baude <ranger@gentoo.org> sun-javamail-1.4.1.ebuild:
  stable ppc64, bug 212658

  08 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  sun-javamail-1.4.1.ebuild:
  amd64 stable, bug #212658.

  08 Mar 2008; Markus Meier <maekke@gentoo.org> sun-javamail-1.4.1.ebuild:
  x86 stable, bug #212658

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  sun-javamail-1.4.1.ebuild:
  Stable on ppc, see bug #212658.

*sun-javamail-1.4.1 (19 Dec 2007)

  19 Dec 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-javamail-1.4.1.ebuild:
  Version bump.

  25 Nov 2007; Vlastimil Babka <caster@gentoo.org> sun-javamail-1.4.ebuild:
  Stop passing build.sysclasspath=ignore to eant, eclass does it now.

  02 Apr 2007; Vlastimil Babka <caster@gentoo.org> sun-javamail-1.4.ebuild:
  Don't call eant with JAVA_PKG_STRICT=true but pass
  -Dbuild.sysclasspath=ignore explicitly. Small cleanup.

  01 Apr 2007; Raúl Porcel <armin76@gentoo.org> sun-javamail-1.4.ebuild:
  Add ~ia64 keyword wrt bug 158687

  29 Jan 2007; Vlastimil Babka <caster@gentoo.org> sun-javamail-1.4.ebuild:
  Add java-ant-2 to inherit.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  sun-javamail-1.4.ebuild:
  Add ~x86-fbsd keyword.

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> sun-javamail-1.4.ebuild:
  Stable on ppc64; bug #154679

  23 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  sun-javamail-1.4.ebuild:
  ppc stable, bug #154679

  23 Nov 2006; <blubb@gentoo.org> sun-javamail-1.4.ebuild:
  stable on amd64

  10 Nov 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  sun-javamail-1.4.ebuild:
  Stable on x86.

  27 Sep 2006; Vlastimil Babka <caster@gentoo.org> sun-javamail-1.4.ebuild:
  Call eant with JAVA_PKG_STRICT=true to fix bug #143246.
