@@ -1,6 +1,6 @@
+DIST javamail-1.4.2-src.zip 1108483 RMD160 9f21027faefc8ae7465f9ff6ef08f8d67ae82af4 SHA1 102842e39d35012fecc2ee986dc9ae6c42e6b9bf SHA256 3abda1db9d8cbeaaf73776c9bb82366b703c754a24e2f97d3828ddf9fd611927
 DIST sun-javamail-1.4.1.tar.bz2 395502 RMD160 8eb08845d2027eb10d732de8720a12f0c9e6d69e SHA1 f9cde1685d85c30c8566c9cc76804a577cdb8d42 SHA256 9e3830e59773c45ee9594fc38541eeca7a509fe6271dbb988f7e288f265fe70d
-DIST sun-javamail-1.4.tar.bz2 288541 RMD160 ea5a49c37314d13fd3975f66c7ad6f52e88bd00d SHA1 2aa4e91a0e82c2e2a709e1a73b30ad9b25f7e3bf SHA256 7c45efe65123f439a7d88e478c9fa8f3475c455aab9e7f1466b207d1e9bbbaee
 EBUILD sun-javamail-1.4.1.ebuild 1549 RMD160 74c034568a8d822e91b974a27f447e11a6829d89 SHA1 8408004441a45038dbbcf331a88c3877d90a1383 SHA256 1f1e689844192fed2e009ae46dda4b9a2ced5720102ad19779eb1827520da12b
-EBUILD sun-javamail-1.4.ebuild 1341 RMD160 09dcaaa8726bee43429386a1ef6318b836698ea9 SHA1 98aacd930f8eaefad897c7b4a8ffe25d0bfa89cf SHA256 ca9e32819ab3fc254fbb0b96202d920f6459d405ad4fa4a1ee70f269731dc6d8
-MISC ChangeLog 2212 RMD160 cde54ea412d6b0eb5414e3a2a15105e120a46977 SHA1 3b9a8e6efa900a6aec16afa8f26c2d2d1667da21 SHA256 18be64299b1548ef07fc1f07dbd7fb9fb231f741ed37be427cffffb312286dba
+EBUILD sun-javamail-1.4.2.ebuild 1705 RMD160 975713427667d6203bbc08b0209106f0276f1e9a SHA1 39fe1431ff66c07db3c58c2e2e1fdeded78e47f5 SHA256 c965f5d81a7135ee18fb83fd20e26ee0c8d0e201b5a4ebdac68d1b9303a4dd16
+MISC ChangeLog 2405 RMD160 768148a630adbe4ced24b60a80fd3156e0d38ff2 SHA1 881b7370c9938cb87b849e49521bfab7503baee2 SHA256 af0dae5124f9b4cbc8c8398ee483d1b4cfe70afb3083fa26435a51e705bc1cb5
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
