@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/sun-javamail
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-javamail/ChangeLog,v 1.17 2008/03/11 15:16:59 ranger Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-javamail/ChangeLog,v 1.18 2009/05/07 19:29:50 caster Exp $
+
+*sun-javamail-1.4.2 (07 May 2009)
+
+  07 May 2009; Vlastimil Babka <caster@gentoo.org> -sun-javamail-1.4.ebuild,
+  +sun-javamail-1.4.2.ebuild:
+  Version bump, bug #267174. Use virtual for jaf.
 
   11 Mar 2008; Brent Baude <ranger@gentoo.org> sun-javamail-1.4.1.ebuild:
   stable ppc64, bug 212658
